Revert "Fixed issue with spacing when comments are disabled on pages"
This reverts commit 6cbcb37dea8ddd8aaf9222636ea9ff4a3eaf87f3.

--- a/style.css
+++ b/style.css
@@ -452,10 +452,6 @@ img.wp-smiley,
 	padding: 0 0 30px 0;
 }
 
-#primary.no-comments {
-	margin-bottom: 40px;
-}
-
 .home #primary,
 .archive #primary,
 .tag #primary,
